--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=3000
+spring.datasource.username=root
+spring.datasource.password=2018SDzr!
+spring.datasource.url=jdbc:mysql://localhost:3306/aisnakes?serverTimezone=America/New_York&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
